modified the fixed icons at the bottom of the page and also fixed the positioning of the nav on smaller screen mobile devices (test 1)

--- a/css/general.css
+++ b/css/general.css
@@ -137,7 +137,7 @@ SOCIALS
 }
 
 .git-icon {
-  top: 94%;
+  top: 93%;
   position: fixed;
 }
 
@@ -207,7 +207,7 @@ STYLING THE SCROLL TO TOP
 .scroll-up {
   position: fixed;
   right: 0%;
-  bottom: 0%;
+  bottom: -2%;
   cursor: pointer;
   z-index: 10;
 }
